--- a/src/main/resources/assets/freeze_create/lang/ja_jp.json
+++ b/src/main/resources/assets/freeze_create/lang/ja_jp.json
@@ -1,5 +1,5 @@
 {
-  "freeze_create.food_day": "賞味期限: %s日まで",
+  "freeze_create.food_day": "消費期限: %s日まで",
   "freeze_create.freeze": "冷凍済み",
   "freeze_create.rotten": "腐敗"
 }
